# tomato

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt~  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CmakeConfigForOxShmolli2.h.in  CmakeConfigForTomato.h.in  Doxyfile  LICENSE  README.md  appveyor.yml  codeofconduct.md  conanfile.py  contributing.md  coverage.sh  generateDocumentationAndDeploy.sh  notepad.md
app/: OxFactoryOfCalculators.h  OxFactoryOfFitters.h  OxFactoryOfFunctions.h  OxFactoryOfModels.h  OxFactoryOfSignCalculators.h  OxFactoryOfStartPointCalculators.h  OxOriginalShmolliDicomReader.h  OxOriginalShmolliDicomReader.hxx  OxShmolli2.h  OxShmolli2.hxx  OxShmolli2Options.h  OxShmolli2_export.hxx  Tomato.h  Tomato.hxx  TomatoOptions.h  Tomato_export.hxx  Tomato_exportT1.hxx  Tomato_exportT2.hxx  main.cpp
cmake/: CmakeConfigForTomato.h.in  downloadItk.cmake  downloadLmfit.cmake  gtest.cmake  libyaml.cmake  lmfit.cmake  nr2.cmake  nr3.cmake  tomatofit.cmake  tomatolib_export.h  vnl.cmake
html/: _cmake_config_for_ox_shmolli2_8h_source.html  _cmake_config_for_tomato_8h_source.html  _formulas.tex  _k_w_util_8h_source.html  _k_w_util_8hxx_source.html  _k_w_util__test_8cpp.html  _k_w_util__test_8cpp.js  _k_w_util__test_8cpp__incl.map  _k_w_util__test_8cpp__incl.md5  _k_w_util_yaml_8h.html  _k_w_util_yaml_8h__dep__incl.map  _k_w_util_yaml_8h__dep__incl.md5  _k_w_util_yaml_8h__incl.map  _k_w_util_yaml_8h__incl.md5  _k_w_util_yaml_8h_source.html  _ox_calculator_8h.html  _ox_calculator_8h__dep__incl.map  _ox_calculator_8h__dep__incl.md5  _ox_calculator_8h__incl.map  _ox_calculator_8h__incl.md5  _ox_calculator_8h_source.html  _ox_calculator_8hxx.html  _ox_calculator_8hxx__dep__incl.map  _ox_calculator_8hxx__dep__incl.md5  _ox_calculator_8hxx__incl.map  _ox_calculator_8hxx__incl.md5  _ox_calculator_8hxx_source.html  _ox_calculator_results_8h_source.html  _ox_calculator_t1_8h_source.html  _ox_calculator_t1_8hxx_source.html  _ox_calculator_t1__saturation__recovery__test_8cpp.html  _ox_calculator_t1__saturation__recovery__test_8cpp__incl.map  (+1075 more)
lib/: KWUtil.h  (+114 more)
tests/: CMakeLists.txt  KWUtil_test.cpp  NumericalRecipes2_test.cpp  OxCalculatorT1Molli_test.cpp  OxCalculatorT1ShmolliOriginal_test.cpp  OxCalculatorT1Shmolli_test.cpp  OxCalculatorT1WithSignCheck_test.cpp  OxCalculatorT1_saturation_recovery_test.cpp  OxCalculatorT2Linear_test.cpp  OxCalculatorT2TruncationNoise_test.cpp  OxCalculatorT2Truncation_test.cpp  OxCalculatorT2_factory_test.cpp  OxCalculatorT2_test.cpp  OxCalculator_SameResultsAsDicom.cpp  OxFitterAmoebaNr2_test.cpp  OxFitterAmoebaPrivateNr2_test.cpp  OxFitterAmoebaVnl_test.cpp  OxFitterLevenbergMarquardtLmfit_test.cpp  OxFitterLevenbergMarquardtTomatoFit_test.cpp  OxFitterLevenbergMarquardtVnl_test.cpp  OxFunctionsT1AdapterVnlCost_test.cpp  OxFunctionsT1AdapterVnlLeastSquares_test.cpp  OxFunctionsT1Basic_test.cpp  OxFunctionsT1CalculatorShmolli_test.cpp  OxFunctionsT1ThreeParam_test.cpp  OxFunctionsT1TwoParam_test.cpp  OxFunctionsT2ThreeParam_test.cpp  OxImageCalculatorT1_test.cpp  OxImageCalculatorT2_test.cpp  OxImageCalculatorT2star_test.cpp  OxImageCalculator_test.cpp  OxModelT1AdapterLmfitLeastSquares_test.cpp  OxModelT1AdapterTomatoFitLeastSquares_test.cpp  OxModelT1AdapterVnlCost_test.cpp  OxModelT1AdapterVnlLeastSquares_test.cpp  OxModelT1CalculatorShmolli_test.cpp  OxModelT1ThreeParam_test.cpp  OxModelT1TwoParam_test.cpp  OxModelT2OneParam_test.cpp  OxModelT2ThreeParam_test.cpp  (+43 more)
tests/testData/: Hcmr_Phantom_1916_Shmolli_192i_e11___Shmolli_config___fileList.yaml  Hcmr_Phantom_1916_Shmolli_192i_e11_fileList.yaml  Hcmr_Phantom_1916_Shmolli_192i_e11_fileList_noPhase.yaml  Hcmr_Phantom_1916_Shmolli_192i_e11_fileList_noSpaces.yaml  Hcmr_Phantom_1916_Shmolli_192i_e11_inputDirs.yaml  Hcmr_Phantom_1916_Shmolli_192i_e11_inputDirs_noPhase.yaml  T1_blood.yaml  T1_long.yaml  T1_myocardium.yaml  T2_blood.yaml  T2_blood_3samples.yaml  T2_myocardium.yaml  T2_myocardium_3samples.yaml  T2_myocardium_4samples.yaml  blood.yaml  blood_5samples.yaml  ice.yaml  myocardium.yaml  saturation_recovery.yaml  tomatoConfig_Shmolli_inputDirPaths.yaml  tomatoConfig_Shmolli_inputFilePaths.yaml  tomatoConfig_T2_inputDirPaths.yaml
tests/testData/dicom/Hcmr_Phantom_1916_260C/Konrad_Shmolli - 1/ShMOLLI_192i_e11_12/: IM-0001-0001.dcm  IM-0001-0003.dcm  IM-0001-0006.dcm  IM-0001-0007.dcm
tests/testData/dicom/Hcmr_Phantom_1916_260C/Konrad_Shmolli - 1/ShMOLLI_192i_e11_13/: IM-0002-0001.dcm  IM-0002-0002.dcm  IM-0002-0003.dcm  IM-0002-0004.dcm  IM-0002-0005.dcm
tests/testData/dicom/Hcmr_Phantom_1916_260C/Konrad_Shmolli - 1/ShMOLLI_192i_e11_FITPARAMS_15/: IM-0004-0001.dcm  IM-0004-0004.dcm  IM-0004-0007.dcm
tests/testData/dicom/Hcmr_Phantom_1916_260C/Konrad_Shmolli - 1/ShMOLLI_192i_e11_T1MAP_14/: IM-0003-0001.dcm
tests/testData/dicom/Hcmr_Phantom_1916_260C/Konrad_Shmolli/ShMOLLI_192i_e11_12/: IM-0001-0002.dcm  IM-0001-0004.dcm  IM-0001-0005.dcm
tests/testData/dicom/Hcmr_Phantom_1916_260C/Konrad_Shmolli/ShMOLLI_192i_e11_13/: IM-0002-0006.dcm  IM-0002-0007.dcm
tests/testData/dicom/Hcmr_Phantom_1916_260C/Konrad_Shmolli/ShMOLLI_192i_e11_FITPARAMS_15/: IM-0004-0002.dcm  IM-0004-0003.dcm  IM-0004-0005.dcm  IM-0004-0006.dcm
tests/testData/dicom/Hcmr_Phantom_1916_260C/Konrad_Shmolli/ShMOLLI_192i_e11_T1MAP_14/: IM-0003-0002.dcm
tests/testData/dicomT1/: image0001.dcm  image0002.dcm  image0003.dcm  image0004.dcm  image0005.dcm  image0006.dcm  image0007.dcm
tests/testData/dicomT1/map/: map0001.dcm
tests/testData/dicomT1/raw/: image0000.dcm  image0001.dcm  image0002.dcm  image0003.dcm  image0004.dcm  image0005.dcm  image0006.dcm  image0007.dcm
tests/testData/dicomT2/: image0001.dcm  image0002.dcm  image0003.dcm  image0004.dcm  image0005.dcm  image0006.dcm  image0007.dcm  image0008.dcm  image0009.dcm  image0010.dcm  image0011.dcm
tests/testData/dicomT2/map/: map0001.dcm
tests/testData/dicomT2/raw/: image0000.dcm  image0001.dcm  image0002.dcm  image0003.dcm  image0004.dcm  image0005.dcm  image0006.dcm  image0007.dcm  image0008.dcm  image0009.dcm  image0010.dcm
(+593 files in other folders)
